--- a/rest/playground/templates/home.html
+++ b/rest/playground/templates/home.html
@@ -62,7 +62,7 @@ LD Server Playground
                                 <div class="input-group-prepend">
                                     <label class="input-group-text" for="input-variant">Variant</label>
                                 </div>
-                                <input type="text" class="form-control" id="input-variant" placeholder="CHROM:POSITION_ALT/REF" oninput="setHttpRequest()" disabled>
+                                <input type="text" class="form-control" id="input-variant" placeholder="CHROM:POSITION_REF/ALT" oninput="setHttpRequest()" disabled>
                             </div>
                         </div>
                         <div class="form-group">
